# EmbeddedLogger

./: .gitignore  CMakeLists.txt
include/: log.h
src/: CMakeLists.txt
src/LogClient/: CMakeLists.txt  logClient.c  logClient.h
src/Logger/: CMakeLists.txt  logger.c  logger.h
src/include/: config.h  log.h
tests/: CMakeLists.txt  main_test.cpp
tests/logClientTests/: CMakeLists.txt  logClientTests.cpp
tests/loggerTests/: CMakeLists.txt  loggerTests.cpp
